testing/tests/ui/macro_named_argument.stderr
error: no argument named `param3` in macro "thrice"
 --> InvalidNamedArg.html:5:2
       "- call thrice(param1=2, param3=3) -%}"
 --> tests/ui/macro_named_argument.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named argument `param1` was passed more than once
       failed to parse template source at row 5, column 15 near:
       "(param1=2, param1=3) -%}"
  --> tests/ui/macro_named_argument.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: failed to parse template source at row 5, column 29 near:
       "| filter(param1=12) -%}"
  --> tests/ui/macro_named_argument.rs:20:10
   |
20 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named arguments must always be passed last
       failed to parse template source at row 4, column 15 near:
       "(param1=2, 3) -%}"
  --> tests/ui/macro_named_argument.rs:29:10
   |
29 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot have unnamed argument (`param2`) after named argument in macro "thrice"
 --> InvalidNamedArg5.html:4:2
       "- call thrice(3, param1=2) -%}"
  --> tests/ui/macro_named_argument.rs:37:10
   |
37 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
